--- a/netcruzer_download_changelog.html
+++ b/netcruzer_download_changelog.html
@@ -11,7 +11,7 @@
 <div style="background-color:#d8d8e0; border: 1px solid black; padding: 7px 20px; font-size:125%;">
 <b>Netcruzer Download V2.03 - 2014 December 9</b>
 </div>
-Added support for iMod and Expansion boards, Buffer fixes, Documentation.
+Added support for iMod and Expansion boards, Buf fixes, Documentation.
 <div style="padding: 0px 0px 0px 5px;">
 <!-- =============== Project: netcruzer =============== -->
 <br><div style="background-color:#eee; border: 1px dashed black; padding: 1px 20px; font-size:110%;">
